--- a/default.conf
+++ b/default.conf
@@ -6,3 +6,4 @@ root_size="all" # If equal to 'all' them will use remaining space on disk.
 boot_size="512G"
 swap_size="2G"
 locales=("en_US.UTF-8" "en_AU.UTF-8" "ja_JP.UTF-8")
+disk="prompt" # If equal to 'prompt' will interactively ask for input.  Otherwise use a path to a disk, eg /dev/sda or /dev/nvme0n1
