--- a/default.conf
+++ b/default.conf
@@ -2,8 +2,9 @@
 # default values.
 
 hostname="arch" # Hostname for the installed system
-root_size="all" # If equal to 'all' them will use remaining space on disk.
-boot_size="512G"
-swap_size="2G"
-locales=("en_US.UTF-8" "en_AU.UTF-8" "ja_JP.UTF-8")
+root_size="fill" # If equal to 'fill' then use remaining space on disk.
+boot_size="512M"
+swap_size="2G" # Unused if swap_type is set to 'disabled'
+swap_type="disabled" # One of 'disabled', 'file' or 'partition'
+locales=("en_US.UTF-8")
 disk="prompt" # If equal to 'prompt' will interactively ask for input.  Otherwise use a path to a disk, eg /dev/sda or /dev/nvme0n1
