Lots of commits so I can push & pull down onto arch live ISO and test in real environment.  Will squash it all later.

--- a/default.conf
+++ b/default.conf
@@ -2,9 +2,16 @@
 # default values.
 
 hostname="arch" # Hostname for the installed system
-root_size="fill" # If equal to 'fill' then use remaining space on disk.
-boot_size="512M"
-swap_size="2G" # Unused if swap_type is set to 'disabled'
-swap_type="disabled" # One of 'disabled', 'file' or 'partition'
 locales=("en_US.UTF-8")
+
+
+# Disk/partition options
 disk="prompt" # If equal to 'prompt' will interactively ask for input.  Otherwise use a path to a disk, eg /dev/sda or /dev/nvme0n1
+root_size="fill" # If equal to 'fill' then use remaining space on disk.  Exact size must be understood by sgdisk with the unit at the end, eg 512M or 50G
+boot_size="512M" # Exact size must be understood by sgdisk with the unit at the end, eg 512M or 50G
+swap_size="2G" # Unused if swap_type is set to 'disabled'.  Exact size must be understood by sgdisk with the unit at the end, eg 512M or 50G
+swap_type="disabled" # One of 'disabled', 'file' or 'partition'
+root_name="root" # Partition name to apply to root partition
+boot_name="boot" # Partition name to apply to boot partition
+swap_name="swap" # Partition name to apply to swap partition.  Unused if swap_type is set to 'disabled'
+
