Lots of commits so I can push & pull down onto arch live ISO and test in real environment.  Will squash it all later.

--- a/default.conf
+++ b/default.conf
@@ -8,10 +8,10 @@ locales=("en_US.UTF-8")
 # Disk/partition options
 disk="prompt" # If equal to 'prompt' will interactively ask for input.  Otherwise use a path to a disk, eg /dev/sda or /dev/nvme0n1
 root_size="fill" # If equal to 'fill' then use remaining space on disk.  Exact size must be understood by sgdisk with the unit at the end, eg 512M or 50G
-boot_size="512M" # Exact size must be understood by sgdisk with the unit at the end, eg 512M or 50G
+esp_size="512M" # Exact size must be understood by sgdisk with the unit at the end, eg 512M or 50G
 swap_size="2G" # Unused if swap_type is set to 'disabled'.  Exact size must be understood by sgdisk with the unit at the end, eg 512M or 50G
-swap_type="disabled" # One of 'disabled', 'file' or 'partition'
-root_name="root" # Partition name to apply to root partition
-boot_name="boot" # Partition name to apply to boot partition
-swap_name="swap" # Partition name to apply to swap partition.  Unused if swap_type is set to 'disabled'
+swap_type="disabled" # One of 'disabled' or 'partition'.  In the future 'file' may be supported.
+root_name="ROOT" # Partition name & FS label to apply to root partition
+esp_label="ESP" # Partition name & FS label to apply to esp partition
+swap_name="SWAP" # Partition name & FS label to apply to swap partition.  Unused if swap_type is set to 'disabled'
 
